Update technote tags, remove best-practices

--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -5,7 +5,6 @@
     "Home": "/",
     "Tags": {
       "auth": "/tags/auth",
-      "best practices": "/tags/best-practices",
       "caching": "/tags/caching",
       "client": "/tags/client",
       "contracts": "/tags/contracts",
@@ -15,8 +14,7 @@
       "observability": "/tags/observability",
       "performance": "/tags/performance",
       "router": "/tags/router",
-      "schema design": "/tags/schema-design",
-      "schema patterns": "/tags/schema-patterns",
+      "schema-design": "/tags/schema-design",
       "security": "/tags/security",
       "server": "/tags/server",
       "server-driven-ui": "/tags/server-driven-ui",
