--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gatsby-remark-autolink-headers": "^5.4.0",
     "gatsby-remark-copy-linked-files": "^5.4.0",
     "gatsby-remark-mermaid": "^2.1.0",
+    "gatsby-source-apiserver": "^2.1.8",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-remark": "^5.4.0",
@@ -74,6 +75,7 @@
     "interweave": "^12.9.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.127.0",
     "mdast-util-from-markdown": "^0.8.5",
     "path-browserify": "^1.0.1",
     "polished": "^4.1.4",
