Move odyssey nav config to its own config.json

--- a/sources/local.yml
+++ b/sources/local.yml
@@ -9,3 +9,4 @@ graphos/delivery: src/content/graphos/delivery
 graphos/org: src/content/graphos/org
 technotes: src/content/technotes
 community: src/content/community
+odyssey: src/content/odyssey
