--- a/src/content/odyssey/config.json
+++ b/src/content/odyssey/config.json
@@ -1,14 +1,17 @@
 {
   "title": "Odyssey Tutorials",
   "sidebar": {
-    "Getting started with GraphOS": "https://www.apollographql.com/tutorials/getting-started-with-graphos",
-    "Lift-off Series": {
+    "Lift-off (GraphQL Fundamentals)": {
       "Part 1: Basics": "https://www.apollographql.com/tutorials/lift-off-part1",
       "Part 2: Resolvers": "https://www.apollographql.com/tutorials/lift-off-part2",
       "Part 3: Arguments": "https://www.apollographql.com/tutorials/lift-off-part3",
       "Part 4: Mutations": "https://www.apollographql.com/tutorials/lift-off-part4"
     },
-    "Voyage Series": {
+    "GraphOS Basics": {
+      "Getting started": "https://www.apollographql.com/tutorials/getting-started-with-graphos",
+      "Shipping your supergraph": "https://www.apollographql.com/tutorials/graphos-shipping-supergraph"
+    },
+    "Voyage (Adopting Federation)": {
       "Part 1: Federation from Day One": "https://www.apollographql.com/tutorials/voyage-part1",
       "Part 2: Federating the Monolith": "https://www.apollographql.com/tutorials/voyage-part2",
       "Part 3: Federation in Production": "https://www.apollographql.com/tutorials/voyage-part3"
