Start working on mobile sidebar

--- a/src/content/odyssey/config.json
+++ b/src/content/odyssey/config.json
@@ -7,7 +7,7 @@
       "Part 3: Arguments": "https://www.apollographql.com/tutorials/lift-off-part3",
       "Part 4: Mutations": "https://www.apollographql.com/tutorials/lift-off-part4"
     },
-    "GraphOS Basics": {
+    "GraphOS": {
       "Getting started": "https://www.apollographql.com/tutorials/getting-started-with-graphos",
       "Shipping your supergraph": "https://www.apollographql.com/tutorials/graphos-shipping-supergraph"
     },
