--- a/src/content/graphos/security/config.json
+++ b/src/content/graphos/security/config.json
@@ -1,5 +1,18 @@
 {
   "title": "Security",
+  "algoliaFilters": [
+    [
+      "docset:graphos",
+      "docset:graphos/delivery",
+      "docset:graphos/metrics",
+      "docset:graphos/org",
+      "docset:graphos/security"
+    ],
+    [
+      "docset:rover",
+      "docset:federation"
+    ]
+  ],
   "sidebar": {
     "API keys": "/api-keys",
     "Audit log": [
