Redistribute security content

--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -3,18 +3,20 @@
   "sidebar": {
     "Home": "/",
     "What is GraphOS?": "/intro/platform",
-    "Why adopt GraphQL?": "/intro/benefits",
     "Development Tools": {
       "Apollo extension for VS Code": "/devtools/editor-plugins",
       "Configuring Apollo projects": "/devtools/apollo-config",
       "The Apollo CLI (partially deprecated)": "/devtools/cli"
     },
-    "Resources": {
+    "About GraphQL": {
+      "Why adopt GraphQL?": "/intro/benefits",
       "Principled GraphQL": "https://principledgraphql.com",
       "Glossary": "/resources/graphql-glossary",
-      "GraphQL FAQ": "/resources/faq",
-      "Elastic License v2 FAQ": "/resources/elastic-license-v2-faq",
-      "Product launch stages": "/resources/product-launch-stages"
+      "FAQ": "/resources/faq"
+    },
+    "Apollo Release Policies": {
+      "Product launch stages": "/resources/product-launch-stages",
+      "Elastic License v2 FAQ": "/resources/elastic-license-v2-faq"
     }
   }
 }
