--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -5,8 +5,7 @@
       "docset:graphos",
       "docset:graphos/delivery",
       "docset:graphos/metrics",
-      "docset:graphos/org",
-      "docset:graphos/security"
+      "docset:graphos/org"
     ],
     [
       "docset:rover",
