--- a/sources/local.yml
+++ b/sources/local.yml
@@ -6,6 +6,7 @@ graphos: src/content/graphos/basics
 graphos/metrics: src/content/graphos/metrics
 graphos/delivery: src/content/graphos/delivery
 graphos/org: src/content/graphos/org
+graphos/explorer: src/content/graphos/explorer
 technotes: src/content/technotes
 community: src/content/community
 odyssey: src/content/odyssey
