Simplify a couple category landing pages

--- a/src/content/graphos/metrics/config.json
+++ b/src/content/graphos/metrics/config.json
@@ -13,7 +13,7 @@
     ]
   ],
   "sidebar": {
-    "Operation metrics": "/usage-reporting",
+    "Operation metrics": "/",
     "Field usage": "/field-usage",
     "Segmenting by client": "/client-awareness",
     "Datadog forwarding": [
