Add new technote for organisational structure

--- a/src/content/technotes/config.json
+++ b/src/content/technotes/config.json
@@ -20,7 +20,8 @@
       "server-driven-ui": "/tags/server-driven-ui",
       "sre": "/tags/sre",
       "subgraphs": "/tags/subgraphs",
-      "testing": "/tags/testing"
+      "testing": "/tags/testing",
+      "organisation": "/tags/organisation"
     }
   }
 }
