--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "test": "jest",
     "changeset-publish": "changeset publish"
   },
-  "workspaces": [
-    "./packages/*"
-  ],
   "dependencies": {
     "@algolia/autocomplete-core": "^1.5.2",
     "@algolia/autocomplete-plugin-algolia-insights": "^1.5.2",
@@ -29,8 +26,8 @@
     "@apollo/chakra-helpers": "file:packages/chakra-helpers",
     "@apollo/client": "^3.5.10",
     "@apollo/space-kit": "8.11.0",
-    "@chakra-ui/gatsby-plugin": "^2.0.3",
-    "@chakra-ui/react": "^1.8.3",
+    "@chakra-ui/gatsby-plugin": "^3.1.3",
+    "@chakra-ui/react": "^2.6.0",
     "@colliercz/gatsby-transformer-gitinfo": "^1.3.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
@@ -46,33 +43,33 @@
     "algoliasearch": "^4.12.1",
     "apollo-algolia-transform": "^1.0.38",
     "framer-motion": "^4.1.17",
-    "gatsby": "4.24.8",
-    "gatsby-plugin-algolia": "^0.24.0",
-    "gatsby-plugin-apollo": "^4.0.2",
-    "gatsby-plugin-env-variables": "^2.2.0",
-    "gatsby-plugin-google-gtag": "^4.3.0",
-    "gatsby-plugin-google-tagmanager": "^4.3.0",
-    "gatsby-plugin-loadable-components-ssr": "^4.2.0",
-    "gatsby-plugin-manifest": "^4.3.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-next-seo": "^1.9.0",
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-algolia": "^1.0.3",
+    "gatsby-plugin-apollo": "^4.0.3",
+    "gatsby-plugin-env-variables": "^2.3.0",
+    "gatsby-plugin-google-gtag": "^5.9.0",
+    "gatsby-plugin-google-tagmanager": "^5.9.0",
+    "gatsby-plugin-loadable-components-ssr": "^4.3.2",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-mdx": "^5.9.0",
+    "gatsby-plugin-next-seo": "^1.10.0",
     "gatsby-plugin-offline": "^5.3.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-plugin-sitemap": "^6.9.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-plugin-webfonts": "^2.2.1",
-    "gatsby-remark-autolink-headers": "^5.4.0",
-    "gatsby-remark-copy-linked-files": "^5.4.0",
-    "gatsby-remark-mermaid": "^2.1.0",
-    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-plugin-webfonts": "^2.3.2",
+    "gatsby-remark-autolink-headers": "^6.9.0",
+    "gatsby-remark-copy-linked-files": "^6.9.0",
+    "gatsby-remark-mermaid": "^3.0.1",
+    "gatsby-source-filesystem": "^5.9.0",
     "gatsby-source-remote-file": "^0.5.2",
-    "gatsby-transformer-json": "^4.4.0",
-    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-json": "^5.9.0",
+    "gatsby-transformer-remark": "^6.9.0",
     "github-slugger": "^1.4.0",
     "graphql": "^15.8.0",
     "graphql-ws": "^5.8.2",
     "https-browserify": "^1.0.0",
-    "interweave": "^12.9.0",
+    "interweave": "^13.1.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.127.0",
@@ -82,8 +79,8 @@
     "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
     "puppeteer": "^10.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.2.1",
     "react-icons": "^4.6.0",
     "react-markdown": "^8.0.0",
@@ -104,13 +101,18 @@
     "@changesets/changelog-github": "^0.4.3",
     "@changesets/cli": "^2.21.1",
     "@trevorblades/eslint-config": "^7.2.7",
+    "@types/node": "^18.16.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "cpx": "^1.5.0",
     "eslint": "^7.32.0",
     "eslint-plugin-mdx": "^1.11.1",
     "jest": "^27.4.5",
-    "netlify-cli": "^13.1.1"
+    "netlify-cli": "^14.3.1",
+    "typescript": "^5.0.4"
   },
   "volta": {
-    "node": "16.15.1"
+    "node": "18.16.0",
+    "yarn": "1.22.19"
   }
 }
