--- a/src/content/graphos/enterprise/config.json
+++ b/src/content/graphos/enterprise/config.json
@@ -37,7 +37,7 @@
           "enterprise"
         ]
       ],
-      "Features": {
+      "Router Features": {
         "Distributed caching": [
           "https://apollographql.com/docs/router/configuration/distributed-caching",
           [
