Update GraphOS nav configs for search

--- a/src/content/graphos/basics/config.json
+++ b/src/content/graphos/basics/config.json
@@ -6,10 +6,12 @@
       "docset:graphos/delivery",
       "docset:graphos/metrics",
       "docset:graphos/org",
-      "docset:graphos/explorer"
+      "docset:graphos/explorer",
+      "docset:graphos/enterprise"
     ],
     [
       "docset:rover",
+      "docset:router",
       "docset:federation"
     ]
   ],
