--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -6,11 +6,13 @@
       "docset:graphos/delivery",
       "docset:graphos/metrics",
       "docset:graphos/org",
-      "docset:graphos/explorer"
+      "docset:graphos/explorer",
+      "docset:graphos/enterprise"
     ],
     [
       "docset:rover",
-      "docset:federation"
+      "docset:federation",
+      "docset:router"
     ]
   ],
   "sidebar": {
