--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,5 @@
   API_URL = "https://graphql.api.apollographql.com"
   PREFIX_PATHS = "true"
   GATSBY_DISABLE_CACHE_PERSISTENCE = "1"
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
