--- a/src/content/graphos/basics/config.json
+++ b/src/content/graphos/basics/config.json
@@ -56,6 +56,13 @@
         [
           "preview"
         ]
+      ],
+      "Persisted queries": [
+        "/routing/persisted-queries",
+        [
+          "enterprise",
+          "preview"
+        ]
       ]
     },
     "GraphOS Interfaces": {
