Break out Explorer subscriptions into separate article

--- a/src/content/graphos/explorer/config.json
+++ b/src/content/graphos/explorer/config.json
@@ -19,6 +19,7 @@
     "Launch Sandbox": "https://studio.apollographql.com/sandbox/explorer?referrer=docs-nav",
     "Overview": "/",
     "Sandbox (no account required)": "/sandbox",
+    "GraphQL subscription support": "/subscriptions-explorer",
     "Connecting and authenticating": "/connecting-authenticating",
     "Embedding": "/embed-explorer",
     "Operation collections": "/operation-collections",
