--- a/src/content/graphos/enterprise/config.json
+++ b/src/content/graphos/enterprise/config.json
@@ -22,6 +22,7 @@
       "Setup": "https://www.apollographql.com/docs/graphos/quickstart/self-hosted",
       "Apollo Router Features": {
         "Overview": "https://www.apollographql.com/docs/router/enterprise-features",
+        "GraphQL subscriptions": "https://www.apollographql.com/docs/router/executing-operations/subscription-support",
         "Distributed caching": "https://www.apollographql.com/docs/router/configuration/distributed-caching",
         "JWT Authentication": "https://www.apollographql.com/docs/router/configuration/authn-jwt",
         "Operation limits": "https://www.apollographql.com/docs/router/configuration/operation-limits",
