Incorporate some PR feedback (more to come)

--- a/src/content/graphos/basics/config.json
+++ b/src/content/graphos/basics/config.json
@@ -49,7 +49,7 @@
         ]
       ]
     },
-    "Operation Performance": {
+    "Client Operations": {
       "Using @defer": "/operations/defer",
       "GraphQL subscriptions": [
         "/operations/subscriptions",
