Move PQ article path

--- a/src/content/graphos/basics/config.json
+++ b/src/content/graphos/basics/config.json
@@ -57,8 +57,8 @@
           "preview"
         ]
       ],
-      "Persisted queries": [
-        "/routing/persisted-queries",
+      "Safelisting with persisted queries": [
+        "/operations/persisted-queries",
         [
           "enterprise",
           "preview"
