--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@apollo/chakra-helpers": "^1.7.1",
     "@apollo/client": "^3.5.10",
     "@apollo/pedia": "^1.1.1",
+    "@apollo/signup-tracer": "^1.1.0",
     "@apollo/space-kit": "8.11.0",
+    "@apollo/utm-grabber": "^1.3.1",
     "@chakra-ui/gatsby-plugin": "^2.0.3",
     "@chakra-ui/react": "^1.8.3",
     "@colliercz/gatsby-transformer-gitinfo": "^1.3.0",
