--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,8 @@ jobs:
           node-version: 14
 
       - name: Trigger deploy
-        run: npx netlify-cli@16.0.3 deploy --trigger --prod
+        working-directory: /tmp/ntl
+        run: npx netlify-cli@16.3.1 deploy --trigger --prod
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
