Remove "preview" terminology from PQs

--- a/src/content/graphos/basics/config.json
+++ b/src/content/graphos/basics/config.json
@@ -43,8 +43,7 @@
       "Safelisting with persisted queries": [
         "/operations/persisted-queries",
         [
-          "enterprise",
-          "preview"
+          "enterprise"
         ]
       ]
     },
