--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -19,7 +19,7 @@
     "Overview": "/",
     "Governance": {
       "Schema proposals": [
-        "/proposals",
+        "/schema-proposals",
         [
           "enterprise",
           "preview"
@@ -33,8 +33,11 @@
       "Schema linting": {
         "Overview": "/schema-linter",
         "Linter rules": "/linter-rules"
-      },
-      "Validating client operations": "/validating-client-operations",
+      }
+    },
+    "Delivery": {
+      "Publishing schemas": "/publishing-schemas",
+      "Launches": "/launches",
       "Contracts": [
         "/contracts",
         [
@@ -42,9 +45,6 @@
         ]
       ]
     },
-    "Delivery": {
-      "Publishing schemas": "/publication",
-      "Launches": "/launches"
-    }
+    "Validating client operations": "/validating-client-operations"
   }
 }
