--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -18,6 +18,13 @@
   "sidebar": {
     "Overview": "/",
     "Governance": {
+      "Schema proposals": [
+        "/schema-proposals",
+        [
+          "enterprise",
+          "preview"
+        ]      
+      ],
       "Schema checks": {
         "Overview": "/schema-checks",
         "Configuring schema checks": "/check-configurations",
